--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@
           fontFamily: { sans: ["Inter", "ui-sans-serif", "system-ui", "Segoe UI", "Roboto", "Helvetica Neue", "Arial"] },
           colors: {
             brand: {
-              50:  '#ecfeff', 100: '#cffafe', 200: '#a5f3fc', 300: '#67e8f9', 400: '#22d3ee',
-              500: '#06b6d4', 600: '#0891b2', 700: '#0e7490', 800: '#155e75', 900: '#164e63'
+              50:  '#ecfdf5', 100: '#d1fae5', 200: '#a7f3d0', 300: '#6ee7b7', 400: '#34d399',
+              500: '#10b981', 600: '#059669', 700: '#047857', 800: '#065f46', 900: '#064e3b'
             }
-          },
-          boxShadow: {
-            glow: '0 0 0 2px rgba(14,116,144,0.15), 0 20px 40px rgba(2,6,23,0.35)'
           }
         }
       }
     }
-  </script>
+  <\/script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -71,17 +68,15 @@
 
     <div class="max-w-6xl mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
       <div class="reveal">
-        <p class="text-brand-300 font-semibold mb-3">desarrollador web y móvil fullstack</p>
-        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight tracking-tight">impulso productos hermosos, rápidos y accesibles</h1>
-        <p class="text-slate-300 mt-5 max-w-xl">tengo una obsesión saludable por el front end: microinteracciones, performance y accesibilidad. también construyo backends sólidos para escalar sin drama.</p>
+        <p class=\"text-brand-300 font-semibold mb-3\">desarrollador fullstack · web & móvil (react native · ionic)<\/p>
+        <h1 class=\"text-4xl md:text-6xl font-extrabold leading-tight tracking-tight\">construyo apps móviles y erps con foco en front end, performance y accesibilidad<\/h1>
+        <p class=\"text-slate-300 mt-5 max-w-xl\">ingeniero en sistemas con <strong>4 años</strong> construyendo soluciones end-to-end: apps <strong>react native\/ionic</strong>, erps a la medida, dashboards y web moderna. me obsesionan las microinteracciones y la DX del usuario final.<\/p>
         <div class="mt-8 flex flex-wrap gap-3">
           <a href="#proyectos" class="px-5 py-3 rounded-xl bg-white text-slate-900 font-semibold hover:bg-slate-200">ver proyectos</a>
           <a href="assets/CV.pdf" class="px-5 py-3 rounded-xl border border-white/20 hover:border-white/40" download>descargar cv</a>
           <a href="#contacto" class="px-5 py-3 rounded-xl border border-brand-500 text-brand-300 hover:bg-brand-500/10">hablemos</a>
         </div>
-        <div class="mt-8 grid grid-cols-3 gap-6 text-center">
-          <div class="glass rounded-2xl p-4">
-            <div class="text-3xl font-extrabold">+6</div>
+        <div class=\"mt-8 grid grid-cols-3 gap-6 text-center\">\n          <div class=\"glass rounded-2xl p-4\">\n            <div class=\"text-3xl font-extrabold\">+4</div>\n            <div class=\"text-slate-300 text-sm mt-1\">años de experiencia</div>\n          </div>\n          <div
             <div class="text-slate-300 text-sm mt-1">años de experiencia</div>
           </div>
           <div class="glass rounded-2xl p-4">
