--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <a href="assets/CV.pdf" class="px-5 py-3 rounded-xl border border-white/20 hover:border-white/40" download>descargar cv</a>
           <a href="#contacto" class="px-5 py-3 rounded-xl border border-brand-500 text-brand-300 hover:bg-brand-500/10">hablemos</a>
         </div>
-        <div class=\"mt-8 grid grid-cols-3 gap-6 text-center\">\n          <div class=\"glass rounded-2xl p-4\">\n            <div class=\"text-3xl font-extrabold\">+4</div>\n            <div class=\"text-slate-300 text-sm mt-1\">años de experiencia</div>\n          </div>\n          <div
+        <div class=\"mt-8 grid grid-cols-3 gap-6 text-center\">\n          <div class=\"glass rounded-2xl p-4\">\n            <div class=\"text-3xl font-extrabold\">+4</div>\n            <div class=\"text-slate-300 text-sm mt-1\">años de experiencia</div>\n          </div>\n          <div class=\"glass rounded-2xl p-4\">\n            <div class=\"text-lg font-extrabold\">react native · ionic</div>\n            <div class=\"text-slate-300 text-sm mt-1\">apps móviles</div>\n          </div>\n          <div class=\"glass rounded-2xl p-4\">\n            <div class=\"text-lg font-extrabold\">erp & dashboards</div>\n            <div class=\"text-slate-300 text-sm mt-1\">optimización operativa</div>\n          </div>\n        </div>
             <div class="text-slate-300 text-sm mt-1">años de experiencia</div>
           </div>
           <div class="glass rounded-2xl p-4">
@@ -93,10 +93,7 @@
         <div class="relative">
           <img class="rounded-3xl w-full aspect-[4/5] object-cover shadow-glow" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200&auto=format&fit=crop" alt="setup de desarrollador" />
           <div class="absolute -bottom-6 -right-6 glass rounded-2xl p-4 w-60 animate-[float_6s_ease-in-out_infinite]">
-            <p class="text-xs text-slate-300">stack favorito</p>
-            <p class="font-semibold mt-1">react · next.js · tailwind · node · nest · postgres · expo</p>
-          </div>
-        </div>
+            <p class="text-xs text-slate-300">stack favorito<\/p>\n            <p class=\"font-semibold mt-1\">react native · ionic · angular · react · node · php · postgres\/mysql<\/p>\n          <\/div>\n        <\/div>
       </div>
     </div>
   </section>
@@ -123,19 +120,7 @@
         <div>
           <h3 class="text-2xl md:text-3xl font-extrabold">habilidades clave</h3>
           <p class="text-slate-300 mt-3">frontend primero, pero con fundamentos sólidos de arquitectura, bases de datos y devops.</p>
-          <div class="mt-6 flex flex-wrap gap-2">
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">react</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">next.js</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">typescript</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">tailwind</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">node</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">nest</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">postgres</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">prisma</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">expo</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">aws</span>
-            <span class="px-3 py-1 rounded-full bg-brand-500/10 text-brand-300 border border-brand-500/30">docker</span>
-          </div>
+          <div class=\"mt-6 flex flex-wrap gap-2\">\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">react native<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">ionic<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">angular<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">react<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">typescript<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">php<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">.net<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">laravel<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">symfony<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">mysql & sql server<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">power bi<\/span>\n            <span class=\"px-3 py-1 rounded-full bg-brand-500\/10 text-brand-300 border border-brand-500\/30\">linux & windows server<\/span>\n          <\/div>
         </div>
         <div class="grid gap-4">
           <div class="glass rounded-2xl p-5">
@@ -162,26 +147,7 @@
       <p class="text-slate-300 mt-3">un vistazo de dónde he aportado valor</p>
     </div>
 
-    <ol class="mt-10 relative border-s border-white/10 pl-6">
-      <li class="mb-10 reveal">
-        <div class="absolute -left-[7px] w-3 h-3 bg-brand-500 rounded-full"></div>
-        <h4 class="font-semibold">front end lead · fintech</h4>
-        <p class="text-sm text-slate-300">2023 – 2025</p>
-        <p class="mt-2 text-slate-200">lideré el rediseño del onboarding con a/b testing y mejoras de performance que aumentaron la conversión 22%.</p>
-      </li>
-      <li class="mb-10 reveal">
-        <div class="absolute -left-[7px] w-3 h-3 bg-brand-500 rounded-full"></div>
-        <h4 class="font-semibold">fullstack engineer · ecommerce</h4>
-        <p class="text-sm text-slate-300">2021 – 2023</p>
-        <p class="mt-2 text-slate-200">implementé checkout headless (next + nest) y pasarela de pagos; reducimos abandonos 18%.</p>
-      </li>
-      <li class="reveal">
-        <div class="absolute -left-[7px] w-3 h-3 bg-brand-500 rounded-full"></div>
-        <h4 class="font-semibold">mobile developer · startup salud</h4>
-        <p class="text-sm text-slate-300">2019 – 2021</p>
-        <p class="mt-2 text-slate-200">app en expo + react native con offline-first y sincronización segura; >100k descargas.</p>
-      </li>
-    </ol>
+    <ol class=\"mt-10 relative border-s border-white\/10 pl-6\">\n      <li class=\"mb-10 reveal\">
   </section>
 
   <!-- contacto -->
@@ -261,45 +227,45 @@
     // datos de proyectos (edita a tu gusto)
     const projects = [
       {
-        title: 'comercio headless',
-        about: 'checkout headless con next + nest, optimizado para conversión',
-        tech: ['next.js','nest','postgres','stripe','vercel'],
-        img: 'https://images.unsplash.com/photo-1507679799987-c73779587ccf?q=80&w=1200&auto=format&fit=crop',
+        title: 'erp y aplicación móvil (grúas & gps)',
+        about: 'erp integrado + app móvil con monitoreo en tiempo real vía api de gps',
+        tech: ['php','mysql','html','css','ionic','react','rest','apis'],
+        img: 'https://images.unsplash.com/photo-1581092335449-0f71c2df05b2?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       },
       {
-        title: 'app móvil salud',
-        about: 'seguimiento de pacientes offline-first con sincronización segura',
-        tech: ['expo','react native','sqlite','aws'],
-        img: 'https://images.unsplash.com/photo-1557825835-70d97c4aa02b?q=80&w=1200&auto=format&fit=crop',
+        title: 'sistema de requisiciones web',
+        about: 'automatiza solicitud, seguimiento y aprobación de recursos',
+        tech: ['php','sql','mysql','html','css'],
+        img: 'https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       },
       {
-        title: 'design system',
-        about: 'librería de componentes accesibles y con theming',
-        tech: ['storybook','tailwind','typescript'],
-        img: 'https://images.unsplash.com/photo-1557264305-6dd8e2d6f05f?q=80&w=1200&auto=format&fit=crop',
+        title: 'dashboards en power bi',
+        about: 'dashboards en tiempo real conectados a servidores on-premise',
+        tech: ['power bi','dax','sql','mysql'],
+        img: 'https://images.unsplash.com/photo-1551281044-8d8d9041f0b5?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       },
       {
-        title: 'analytics realtime',
-        about: 'dashboard con websockets y gráficos interactivos',
-        tech: ['react','node','socket.io','clickhouse'],
-        img: 'https://images.unsplash.com/photo-1518186233392-c232efbf2373?q=80&w=1200&auto=format&fit=crop',
+        title: 'app móvil entradas/salidas con qr',
+        about: 'registro con códigos qr y sincronización segura (android/ios)',
+        tech: ['ionic 6','angular','slim framework'],
+        img: 'https://images.unsplash.com/photo-1542751371-adc38448a05e?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       },
       {
-        title: 'ia asistente dev',
-        about: 'asistente para revisar PRs y sugerir mejoras',
-        tech: ['python','fastapi','openai','redis'],
-        img: 'https://images.unsplash.com/photo-1534759846116-57968a443f8d?q=80&w=1200&auto=format&fit=crop',
+        title: 'app móvil liquidaciones',
+        about: 'consulta de liquidaciones para usuarios (android/ios)',
+        tech: ['ionic','angular'],
+        img: 'https://images.unsplash.com/photo-1551650975-87deedd944c3?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       },
       {
-        title: 'sistema de reservas',
-        about: 'booking con calendario, pagos y panel admin',
-        tech: ['next.js','prisma','postgres','stripe'],
-        img: 'https://images.unsplash.com/photo-1504805572947-34fad45aed93?q=80&w=1200&auto=format&fit=crop',
+        title: 'módulos erp',
+        about: 'mantenimiento y creación de módulos para optimizar departamentos',
+        tech: ['php','jquery','css3','javascript'],
+        img: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop',
         links: { demo: '#', repo: '#' }
       }
     ];
